# parapluie

./: Cargo.toml  README.md  build.rs
proto/: service.proto
src/: main.rs  proto.rs
src/error/: app.rs  db.rs  endpoint.rs  mod.rs
src/grpc/: service.rs
src/model/: item.rs  mod.rs  partition_key.rs  set_value.rs  sort_key.rs  task.rs  write_condition.rs
src/repository/: mod.rs  processor.rs  query_shim.rs  repository.rs
