[package]
name = "parapluie"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
time = "0.3.36"
rusqlite = { version = "0.32.1", features = ["time"] }
tonic = "*"
prost = "0.13"
prost-types = "0.13.3"
tonic-reflection = "0.12.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"


[build-dependencies]
tonic-build = "*"
